modified html & css

--- a/index.html
+++ b/index.html
@@ -767,17 +767,36 @@
                         We are happy to contact with you.
                     </p>
                 </div>
-                <div class="contact">
-                    <a href="https://www.facebook.com/profile.php?id=100091405150303&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="01028326205"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="https://www.instagram.com/7oda19_1?utm_source=qr&igsh=b2h0NGNuazRlMTcw"><i class="fa-brands fa-instagram"></i></a>
+                <div class="send">
+                   <div class="contact">
+                        <div class="i">
+                            <a href="https://www.facebook.com/profile.php?id=100091405150303&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+                            <span>Facebook</span>
+                        </div>
+                        <div class="i">
+                            <a href="01028326205"><i class="fa-brands fa-whatsapp"></i></a>
+                            <span>Whatsapp</span>
+                        </div>
+                        <div class="i">
+                            <a href="https://www.instagram.com/7oda19_1?utm_source=qr&igsh=b2h0NGNuazRlMTcw"><i class="fa-brands fa-instagram"></i></a>
+                            <span>Instagram</span>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="message">
+                        <input type="text" placeholder="Ussername">
+                        <input type="password" placeholder="Password">
+                        <textarea name="subject" placeholder="Write Here"></textarea>
+                        <input type="submit" value="Send" id="send">
+                    </div>
                 </div>
+                
             </div>
         </div>
-        <footer>
-            <p>Maked by { <span>Dr/ 7oda <i class="fa-solid fa-stethoscope"></i></span> } at 22/06/2024</p>
-        </footer>
+        
     </div>
 </body>
-
+<footer>
+    <p>Maked by { <span>Dr/ 7oda <i class="fa-solid fa-stethoscope"></i></span> } at 22/06/2024</p>
+</footer>
 </html>
